@@ -57,6 +57,8 @@ gtk_source_view_set_auto_indent
 gtk_source_view_get_auto_indent
 gtk_source_view_set_indent_on_tab
 gtk_source_view_get_indent_on_tab
+gtk_source_view_set_indent_width
+gtk_source_view_get_indent_width
 gtk_source_view_set_insert_spaces_instead_of_tabs
 gtk_source_view_get_insert_spaces_instead_of_tabs
 gtk_source_view_set_smart_home_end
@@ -73,8 +75,8 @@ gtk_source_view_set_show_line_numbers
 gtk_source_view_get_show_line_numbers
 gtk_source_view_set_show_margin
 gtk_source_view_get_show_margin
-gtk_source_view_set_tabs_width
-gtk_source_view_get_tabs_width
+gtk_source_view_set_tab_width
+gtk_source_view_get_tab_width
 <SUBSECTION Standard>
 GTK_IS_SOURCE_VIEW
 GTK_IS_SOURCE_VIEW_CLASS
