@@ -100,9 +100,9 @@ void 		 gtk_source_view_set_show_line_markers  (GtkSourceView   *view,
 							 gboolean         show);
 gboolean	 gtk_source_view_get_show_line_markers  (GtkSourceView   *view);
 
-void 		 gtk_source_view_set_tabs_width 	(GtkSourceView   *view,
+void 		 gtk_source_view_set_tab_width          (GtkSourceView   *view,
 							 guint            width);
-guint            gtk_source_view_get_tabs_width         (GtkSourceView   *view);
+guint            gtk_source_view_get_tab_width          (GtkSourceView   *view);
 
 void		 gtk_source_view_set_indent_width 	(GtkSourceView   *view,
 							 gint             width);
