@@ -1,5 +1,9 @@
 2007-08-25  Paolo Borelli  <pborelli@katamail.com>
 
+	* gtksourceview/gtksourceview.[ch]: api review: tabs-width -> tab-width
+
+2007-08-25  Paolo Borelli  <pborelli@katamail.com>
+
 	* gtksourceview/gtksourceview.[ch]: introduce a indent-width property
 	that decouples the indentation step from the tab-width setting.
 	Fixes bug #352847. Based on a patch by Steve Frécinaux.
